# easyterm

./: .nvimlog  Cargo.toml  README.md
crates/easyterm-app/: Cargo.toml
crates/easyterm-app/src/: config.rs  gui.rs  main.rs  pty.rs  session.rs
crates/easyterm-app/src/gui/: app.rs  canvas.rs  clipboard.rs  font.rs  input.rs  render.rs  tab.rs
crates/easyterm-core/: Cargo.toml
crates/easyterm-core/src/: ansi.rs  grid.rs  lib.rs  terminal.rs
crates/easyterm-remote/: Cargo.toml
crates/easyterm-remote/src/: lib.rs
crates/easyterm-render/: Cargo.toml
crates/easyterm-render/src/: lib.rs
