[workspace]
members = [
    "crates/easyterm-app",
    "crates/easyterm-core",
    "crates/easyterm-remote",
    "crates/easyterm-render",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
